<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuessPicture</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="number_default">1/10</string>
    <string name="help">帮助</string>
    <string name="big_picture">大图</string>
    <string name="next">下一个</string>
    <string name="name_default">恶搞分格的喜剧大片</string>
    <string name="prompt">提示</string>
    <string name="level">学童</string>
    <string name="score">得分:100</string>
    <string name="title_activity_image">ImageActivity</string>

</resources>
